# kel

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
arduino/i2c_scan/: i2c_scan.ino
arduino/kel_blink/: kel_blink.ino
arduino/kel_body/: kel_body.ino
docs/: architecture.md  memory.md  realtime.md  remote-pc.md  system.md  vision.md  voice.md  wake.md
docs/superpowers/plans/: 2026-07-08-skill-authoring.md  (+1 more)
sim/: .gitignore  README.md  drive_bot.py  kel_bot.xml  kel_quad.xml  kel_quad_env.py  record_quad.py  render_dog.py  render_model.py  requirements.txt  show_dog.py  train.py  train_quad.py  watch.py  watch_quad.py
src/kel/: __init__.py  __main__.py  app.py
src/kel/body/: orb.py  (+7 more)
tests/: test_announcer.py  test_attention_gate.py  test_authoring_coder.py  test_authoring_contracts.py  test_body_controller.py  test_browser.py  test_conversation_session.py  test_dictation.py  test_echo_cancel.py  test_environment.py  test_feelings.py  test_gemini_session.py  test_gemini_tools.py  test_glow.py  test_keyboard.py  test_launcher.py  test_memory_store.py  test_microphone_audio.py  test_openai_chat.py  test_openai_embedder.py  test_openai_voice.py  test_orb.py  test_porcupine_detector.py  test_prompt.py  test_prosody.py  test_realtime_audio.py  test_realtime_options.py  test_realtime_session.py  test_screen_capture.py  test_screen_face.py  test_seed_memories.py  test_serial_link.py  test_settings.py  test_settings_gemini.py  test_setup_wizard.py  test_shell.py  test_skill_author.py  test_skills_cli.py  test_skills_contracts.py  test_skills_executor.py  (+6 more)
(+79 files in other folders)
